# task_scheduling_simulation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  broker.cpp  est.md  heft  heft.cpp  heft.ilk  hetc  hetc.cpp  hetc.ilk  notes.md  task.cpp  test  test.cpp  vm.cpp  workflow.cpp
general/: broker.cpp
heft/: broker.cpp  heft  heft.cpp  task.cpp  test.cpp  vm.cpp  workflow.cpp
notes/: est.md  no-bid.md
paper/: Aws_vm_characteristics.xlsx  Workflow_Scheduling.docx  Πρότυπο-Πτυχιακής-Εργασίας.docx
src/general/: broker.cpp  task.cpp  vm.cpp  workflow.cpp
src/heft/: broker.cpp  heft  heft.cpp  res.txt  task.cpp  vm.cpp  workflow.cpp
src/test/: test  test.cpp
src/try/: try.cpp
